[package]
name = "spidero"
version = "0.1.0"
authors = ["GengTeng <me@gteng.org>"]
description = "Yet another search engine results crawler written in Rust."
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
json5 = "0.2.2"

futures = "0.1"
tokio = "0.1"
reqwest = "0.9"
url = "1.7.2"

html5ever = "0.22.5"

clap = "2"